fix iconbar overflow

--- a/src/App.css
+++ b/src/App.css
@@ -96,9 +96,7 @@ body {
 }
 
 .iconBar {
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: static;
   padding: 1rem;
   display: flex;
   justify-content: space-between;
@@ -133,7 +131,8 @@ form {
   padding: 2rem;
   width: 100%;
   display: block;
-  height: 50vh;
+  height: 100%;
+  min-height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -211,7 +210,7 @@ button:hover {
 small {
   font-size: 0.8rem;
   color: #ffffff;
-  margin: 0.7em
+  margin: 0.7rem
 }
 
 .card {
